# api/external/infra_proxy/infra_proxy.swagger.json
@@ -11,7 +11,7 @@
     "application/json"
   ],
   "paths": {
-    "/infra_proxy/servers": {
+    "/infra/servers": {
       "get": {
         "operationId": "GetServers",
         "responses": {
@@ -51,7 +51,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{id}": {
+    "/infra/servers/{id}": {
       "get": {
         "operationId": "GetServer",
         "responses": {
@@ -127,7 +127,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{name}": {
+    "/infra/servers/{name}": {
       "get": {
         "operationId": "GetServerByName",
         "responses": {
@@ -151,7 +151,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs": {
+    "/infra/servers/{server_id}/orgs": {
       "get": {
         "operationId": "GetOrgs",
         "responses": {
@@ -205,7 +205,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{id}": {
+    "/infra/servers/{server_id}/orgs/{id}": {
       "get": {
         "operationId": "GetOrg",
         "responses": {
@@ -299,7 +299,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{name}": {
+    "/infra/servers/{server_id}/orgs/{name}": {
       "get": {
         "operationId": "GetOrgByName",
         "responses": {
@@ -329,7 +329,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/clients": {
+    "/infra/servers/{server_id}/orgs/{org_id}/clients": {
       "get": {
         "operationId": "GetClients",
         "responses": {
@@ -359,7 +359,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/clients/{name}": {
+    "/infra/servers/{server_id}/orgs/{org_id}/clients/{name}": {
       "get": {
         "operationId": "GetClient",
         "responses": {
@@ -395,7 +395,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/cookbooks": {
+    "/infra/servers/{server_id}/orgs/{org_id}/cookbooks": {
       "get": {
         "operationId": "GetCookbooks",
         "responses": {
@@ -425,7 +425,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/cookbooks/num_versions": {
+    "/infra/servers/{server_id}/orgs/{org_id}/cookbooks/num_versions": {
       "get": {
         "operationId": "GetCookbooksAvailableVersions",
         "responses": {
@@ -461,7 +461,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/cookbooks/{name}/{version}": {
+    "/infra/servers/{server_id}/orgs/{org_id}/cookbooks/{name}/{version}": {
       "get": {
         "operationId": "GetCookbook",
         "responses": {
@@ -503,7 +503,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/data_bags/{name}": {
+    "/infra/servers/{server_id}/orgs/{org_id}/data_bags/{name}": {
       "get": {
         "operationId": "GetDataBags",
         "responses": {
@@ -539,7 +539,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/data_bags/{name}/{item}": {
+    "/infra/servers/{server_id}/orgs/{org_id}/data_bags/{name}/{item}": {
       "get": {
         "operationId": "GetDataBagItem",
         "responses": {
@@ -581,7 +581,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/environment/{name}": {
+    "/infra/servers/{server_id}/orgs/{org_id}/environment/{name}": {
       "get": {
         "operationId": "GetEnvironment",
         "responses": {
@@ -617,7 +617,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/environments": {
+    "/infra/servers/{server_id}/orgs/{org_id}/environments": {
       "get": {
         "operationId": "GetEnvironments",
         "responses": {
@@ -647,7 +647,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/roles": {
+    "/infra/servers/{server_id}/orgs/{org_id}/roles": {
       "get": {
         "operationId": "GetRoles",
         "responses": {
@@ -677,7 +677,7 @@
         ]
       }
     },
-    "/infra_proxy/servers/{server_id}/orgs/{org_id}/roles/{name}": {
+    "/infra/servers/{server_id}/orgs/{org_id}/roles/{name}": {
       "get": {
         "operationId": "GetRole",
         "responses": {
@@ -713,7 +713,7 @@
         ]
       }
     },
-    "/infra_proxy/version": {
+    "/infra/version": {
       "get": {
         "operationId": "GetVersion",
         "responses": {
